Fixed review comments

--- a/TinyTodo.Web/Views/Auth/login.cshtml
+++ b/TinyTodo.Web/Views/Auth/login.cshtml
@@ -8,6 +8,6 @@
 <p>Password: <input type="password" name="password" placeholder="Any password" required></p>
 <input type="hidden" value="/" name="returnUrl"/>
 <p><input type="submit"/></p>
-<p style="color: gray;">To test admin module access login as admin@demo.com</p>
+<p style="color: gray;">To test admin module access login as @Constants.AdminUserEmail</p>
 </form>
 </div>
